--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,11 @@
   cursor: pointer;
 }
 
+.book-details rating-stars {
+  color:  rgb(245, 250, 0);
+}
+
+
 /* create new book form */
 .create {
   max-width: 400px;
@@ -101,3 +106,4 @@
   border-radius: 8px;
   cursor: pointer;
 }
+
